--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cris Artes em Crochê</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="./imagens/logo2.jpg" type="image/x-icon">
+  <link rel="icon" href="./imagens/logo2.jpg" type="image/x-icon"> <!--Coloca a logo da loja no ícone da aba-->
 </head>
 
 <body>
